# devd-tools

./: .gitignore  README.md  jr-dev.spec  main.py  pyproject.toml  requirements.txt  stats.json
config/: macros.json  snippets.json
core/: constants.py
core/commands/: __init__.py  command_executor.py
core/config/: config_manager.py
core/events/: __init__.py  event_router.py  input_event.py
core/features/: __init__.py  base_feature.py  feature_registry.py
core/modes/: mode_manager.py
core/snippets/: snippet_manager.py
features/: __init__.py  ai_assistant.py  clone_project.py  docker_manager.py  frontend_runner.py  git_commit.py  git_status.py  mode_switcher.py  shortcut_guide.py  smart_terminal.py  snippet_tool.py  terminal_quick.py
inputs/: __init__.py  base_input.py  keyboard_provider.py
runtime/: bootstrap.py
scripts/: build.bat
ui/: dialogs.py  popup_runner.py  quick_panel.py  settings_dialog.py  settings_window.py  snippet_selector.py  system_tray.py  visual_feedback.py
utils/: context_collector.py  logger.py  project_detector.py  statistics.py  updater.py  windows_utils.py
