[project]
name = "macro-engine"
version = "2.0.0"
description = "Developer Macro Engine - Workflow Automation for Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
    "pystray>=0.19.4",
    "Pillow>=10.0.0",
    "pywin32>=306",
    "pyperclip>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
